...
            android:padding="24dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center">

            <!-- FIND FRIENDS ROCK BUTTON -->
            <FrameLayout
                android:id="@+id/btnFindFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless">
...
